# Robotics

./: CMakeLists.txt  move.py  package.xml  position.bag  robot_cleaner.cpp
IP200_ROS/ip200_core/include/ip200_core/: ip200_driver.hpp
IP200_ROS/ip200_core/launch/: ip200_core.launch  ip200_driver.launch
IP200_ROS/ip200_description/urdf/: ip200.gv  ip200_description.urdf
IP200_ROS/ip200_motor_driver/: package.xml
agv_control/: CMakeLists.txt
agv_control/include/: agv_control.hpp
agv_control/launch/: agv_control.launch  robot_controller.launch
agv_control/scripts/: odometry_converter.py  pose_converter.py
agv_control/src/: agv_control.cpp
agv_detect/: CMakeLists.txt
agv_detect/include/: aruco_detect.hpp  calibaration_540(2).yml  calibration_custom.yml
agv_detect/launch/: aruco_detect.launch
agv_detect/src/: agv_tf_broadcaster.cpp  agv_tf_listener.cpp  aruco_detect.cpp  camera_pos_filter.cpp  camera_tf_broadcaster.cpp  pos_filter.cpp
agv_estimator/include/: estimator.hpp
agv_estimator/src/: agv_estimator.cpp
agv_msgs/: CMakeLists.txt  package.xml
agv_msgs/srv/: Target.srv
include/: agv_control.hpp  aruco_detect.hpp  calibration_1080.yml  calibration_540.yml  estimator.hpp
launch/: agv_control.launch  aruco_detect.launch  estimator.launch
scripts/: robot_controller.py
src/: agv_control.cpp  agv_estimator.cpp  agv_pose_subscriber.cpp  agv_tf_listener.cpp  aruco_detect.cpp  camera_pos_filter.cpp  camera_tf_broadcaster.cpp
